# C_Strings_Library

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  compile.sh  notes_and_questions
c_str_lib/: c_string.c  c_string.h
google_tests/: main.cpp
google_tests/Tests/: tests.cpp
src/: main.c
test_files/: test.txt
